# engram

./: .env.example  .gitignore  ENGRAM_TECHNICAL_SPEC.md  ENGRAM_WRITEUP.md  README.md  alembic.ini  config.py  demo_test_results.txt  docker-compose.yml  memory.md  pyproject.toml
agent/: orchestrator.py  prompt.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: dependencies.py  main.py  schemas.py
api/routers/: chat.py  memories.py  sessions.py
db/: connection.py
memory/: extractor.py  md_sync.py  resolver.py  retriever.py  types.py
repositories/: memory_repository.py  message_repository.py  session_repository.py  user_repository.py
scripts/: benchmark.py  demo_test.py  e2e_test.py  init_db.py  seed_user.py
services/: chat_service.py  memory_service.py  session_service.py
tests/: conftest.py
tests/api/: test_routes.py
tests/memory/: test_extractor.py  test_resolver.py  test_retriever.py
tests/repositories/: test_memory_repository.py  test_session_repository.py
tests/services/: test_memory_service.py  test_session_service.py
ui/: api_client.py  app.py
ui/components/: chat.py  memory_viewer.py  sidebar.py
